@@ -4,6 +4,8 @@ update-manager (1:0.59.9ubuntu1) feisty; urgency=low
   * DistUpgrade/DistUpgradeViewKDE.py:
     - i18n KDE frontend fixes, LP#95638, LP#94927
     - set text on confirm dialogue buttons
+    - (re)spawn embedded konsole for each fork, 
+      fixes crash when removing packages
 
  -- 
 
